[tool.poetry]
name = "ormos"
version = "0.1.0"
description = "Tooling for migrating content from the old Wizards sites"
authors = ["Max Dymond <maxmakesmagic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.2"
markdownify = "^0.11.6"
requests = "^2.28.2"
pony = "^0.7.16"
pymysql = "^1.0.2"
wayback = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
